unpackaged/main/default/objects/ob1__Output_Template__c/ob1__Output_Template__c.object-meta.xml
<CustomObject>
    <label>Output Template</label>
    <nameField>
        <label>Output Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Output Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>