unpackaged/main/default/objects/ob1__Output_Template__c/fields/ob1__BCC__c.field-meta.xml
<CustomField>
    <fullName>ob1__BCC__c</fullName>
    <label>BCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>