unpackaged/main/default/objects/ob1__Output_Template__c/fields/ob1__BCC_Sender__c.field-meta.xml
<CustomField>
    <fullName>ob1__BCC_Sender__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the system automatically BCC the sender on all emails?</description>
    <inlineHelpText>Should the system automatically BCC the sender on all emails?</inlineHelpText>
    <label>BCC Sender</label>
    <type>Checkbox</type>
</CustomField>