unpackaged/main/default/objects/ob1__Output_Template__c/fields/ob1__Content_Type__c.field-meta.xml
<CustomField>
    <fullName>ob1__Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>application/vnd.ms-excel</fullName>
            </value>
            <value>
                <fullName>text/html</fullName>
            </value>
            <value>
                <fullName>application/pdf</fullName>
            </value>
            <value>
                <fullName>application/vnd.ms-word</fullName>
            </value>
            <value>
                <fullName>text/xml</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>