unpackaged/main/default/objects/ob1__Output_Template__c/fields/ob1__Content_Type_Extension__c.field-meta.xml
<CustomField>
    <fullName>ob1__Content_Type_Extension__c</fullName>
    <description>Setting this field will cause the output to be sent as an attachment.  This is necessary for content types such as word, excel, pdf, etc.</description>
    <inlineHelpText>Setting this field will cause the output to be sent as an attachment.  This is necessary for content types such as word, excel, pdf, etc.</inlineHelpText>
    <label>Content Type Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>