unpackaged/main/default/objects/ob1__Output_Template__c/fields/ob1__Interface_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>ob1__Interface_Class_Name__c</fullName>
    <label>Interface Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>