unpackaged/main/default/objects/ob1__Output_Template__c/fields/ob1__Is_Default_for_Class__c.field-meta.xml
<CustomField>
    <fullName>ob1__Is_Default_for_Class__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default for Class</label>
    <type>Checkbox</type>
</CustomField>