unpackaged/main/default/objects/ob1__Output_Template__c/fields/ob1__Object_Description_Field__c.field-meta.xml
<CustomField>
    <fullName>ob1__Object_Description_Field__c</fullName>
    <defaultValue>"Name"</defaultValue>
    <description>What field on the object identified in Object Name, should the system use to help identify the record reported on in various pages?  (Defaults to Name)</description>
    <inlineHelpText>What field on the object identified in Object Name, should the system use to help identify the record reported on in various pages?  (Defaults to Name)</inlineHelpText>
    <label>Object Description Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>