unpackaged/main/default/objects/ob1__Output_Template__c/fields/ob1__Related_List_Field__c.field-meta.xml
<CustomField>
    <fullName>ob1__Related_List_Field__c</fullName>
    <description>If you have added a lookup relationship field on Output_History so that you can create a related list on object (entered in Object Name), what is the api name of that field?</description>
    <label>Related List Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>