unpackaged/main/default/objects/ob1__Output_Template__c/fields/ob1__Template_Class__c.field-meta.xml
<CustomField>
    <fullName>ob1__Template_Class__c</fullName>
    <label>Template Class</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>