unpackaged/main/default/objects/ob1__Output_Template__c/fields/ob1__To__c.field-meta.xml
<CustomField>
    <fullName>ob1__To__c</fullName>
    <label>To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>