unpackaged/main/default/objects/ob1__Output_Template__c/fields/ob1__Use_Intelligent_Email_Limit_Management__c.field-meta.xml
<CustomField>
    <fullName>ob1__Use_Intelligent_Email_Limit_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked output builder when sending reports to an email belonging to a user (whether in the to, cc, or bcc fields) will send the email directly to that user to avoid the email counting towards the daily limit on emails sent.</description>
    <inlineHelpText>If checked output builder when sending reports to an email belonging to a user (whether in the to, cc, or bcc fields) will send the email directly to that user to avoid the email counting towards the daily limit on emails sent.</inlineHelpText>
    <label>Use Intelligent Email Limit Management</label>
    <type>Checkbox</type>
</CustomField>