unpackaged/main/default/objects/ob1__Output_Template__c/validationRules/ob1__Attachments_Require_Message.validationRule-meta.xml
<ValidationRule>
    <fullName>ob1__Attachments_Require_Message</fullName>
    <active>true</active>
    <description>When sending an attachment style message, you must provide the attachment message</description>
    <errorConditionFormula>NOT(ISBLANK(ob1__Content_Type_Extension__c)) &amp;&amp; ISBLANK(ob1__Attachment_Message__c)</errorConditionFormula>
    <errorDisplayField>ob1__Attachment_Message__c</errorDisplayField>
    <errorMessage>You must provide an attachment message for reports that are sent as attachments</errorMessage>
</ValidationRule>