unpackaged/main/default/objects/ob1__Output_Template__c/listViews/ob1__All.listView-meta.xml
<ListView>
    <fullName>ob1__All</fullName>
    <columns>NAME</columns>
    <columns>ob1__Template_Class__c</columns>
    <columns>ob1__Is_Default_for_Class__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>